adds feather func to global app

--- a/app.html
+++ b/app.html
@@ -5,6 +5,8 @@
   </head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-    
+    <script defer>
+      feather.replace()
+    </script>
   </body>
 </html>
